tests/ui/derive/unknown_struct_attr.rs
use clapfig::Schema;

#[derive(Schema)]
#[clapfig(notreal = "x")]
struct Bad {
    field: String,
}

fn main() {}
